Changelog
=========

2.0.1 (unreleased)
------------------

- Declare dependency on plone.namedfile[blobs].
  [lgraf]


2.0.0 (2018-02-15)
------------------

- Complete rewrite. Not compatible with previous versions.
  [buchi]